--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
+    "@expo/webpack-config": "^0.17.0",
     "@react-native-masked-view/masked-view": "0.2.7",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.1",
@@ -20,14 +22,19 @@
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-web": "~0.18.7",
-    "react-navigation": "^4.4.4",
-    "@expo/webpack-config": "^0.17.0"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/jest-native": "^5.0.0",
+    "@testing-library/react-native": "^11.2.0",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "jest-expo": "^46.0.1",
     "typescript": "~4.3.5"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "private": true
 }
